6_diplom/k8s/app/deploy_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deploy
  labels:
    app: flask
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: cr.yandex/crp24405qdf48unu20bv/python-flask:v0.1
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-svc
spec:
  selector:
    app: flask
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
